--- a/crypto5/package.json
+++ b/crypto5/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "encdec",
+  "name": "crypto5",
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
@@ -11,8 +11,8 @@
   "license": "ISC",
   "dependencies": {
     "assert": "^1.3.0",
+    "crypto": "0.0.3",
     "dotenv": "^1.1.0",
-    "mongodb": "^1.4.35",
-    "mongoskin": "^1.4.13"
+    "mongodb": "^2.0.27"
   }
 }
